log
Tue 21 Mar 2023 03:46:43 PM UTC: 
 tests:  0|6
total_score: 0/70
d4836c0
Tue 21 Mar 2023 04:03:06 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
95b6420
Tue 21 Mar 2023 04:17:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
de74ac1
Tue 21 Mar 2023 04:18:33 PM UTC: 
 list.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:12: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   36 |     return lista;
      |            ^~~~~
      |            list
list.c:36:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4475cf2
Tue 21 Mar 2023 04:18:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b9e7820
Tue 21 Mar 2023 05:33:33 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
642cf1d
Tue 21 Mar 2023 05:35:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
0b2f8b4
Tue 21 Mar 2023 05:47:55 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
402fb45
Tue 21 Mar 2023 05:49:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
73a48af
Tue 21 Mar 2023 05:49:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
bba8c94
Tue 21 Mar 2023 05:51:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
db828b1
Tue 21 Mar 2023 06:06:46 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
c0d86ed
Tue 21 Mar 2023 06:12:08 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
31d331f
Tue 21 Mar 2023 06:23:53 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
fc173a0
Thu 23 Mar 2023 12:48:14 PM UTC: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  10|2
total_score: 45/70
c3d805a
Thu 23 Mar 2023 12:59:43 PM UTC: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  10|2
total_score: 45/70
f2aacfb
Thu 23 Mar 2023 01:00:50 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
bcbc481
Thu 23 Mar 2023 01:02:15 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
f397dcd
Thu 23 Mar 2023 02:54:50 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  11|1
total_score: 55/70
c40ec34
Thu 23 Mar 2023 03:01:29 PM UTC: 
 list.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  11|1
total_score: 55/70
4882a49
Thu 23 Mar 2023 03:12:27 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|1
total_score: 55/70
e62e858
Thu 23 Mar 2023 04:51:35 PM UTC: 
 list.c | 25 ++++---------------------
 1 file changed, 4 insertions(+), 21 deletions(-)
 tests:  11|1
total_score: 55/70
574ba6c
Thu 23 Mar 2023 05:02:13 PM UTC: 
 list.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  12|0
total_score: 70/70
9772929
Thu 23 Mar 2023 05:03:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
39ee877
Thu 23 Mar 2023 05:04:32 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|0
total_score: 70/70
8e8b1d9
Thu 23 Mar 2023 05:08:25 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  12|0
total_score: 70/70
cfd6b2c
Thu 23 Mar 2023 07:38:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 60/70
39006b4
Thu 23 Mar 2023 07:41:36 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 60/70
be1f3c0
Thu 23 Mar 2023 07:48:59 PM UTC: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  11|1
total_score: 60/70
b1a39ff
Thu 23 Mar 2023 07:49:31 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 60/70
e86765c
Thu 23 Mar 2023 08:02:33 PM UTC: 
 list.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  11|1
total_score: 60/70
06b4092
Thu 23 Mar 2023 08:04:13 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 60/70
65dd4d6
Thu 23 Mar 2023 09:13:54 PM UTC: 
 list.c | 19 ++++++++++---------
 1 file changed, 10 insertions(+), 9 deletions(-)
 tests:  12|0
total_score: 70/70
839ae9a
